<?xml version="1.0"?>
<package format="2">
    <name>rmpv</name>
    <version>0.0.0</version>
    <description>The ROS Motion Planning Visualizer (RMPV) package</description>
    <maintainer email="913982779@qq.com">Yang Haodong</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>pluginlib</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib_msgs</depend>
    <depend>rviz</depend>
    <depend>std_msgs</depend>
    <depend>wrapper_planner</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
