<?xml version="1.0"?>
<package format="2">
  <name>wrapper_planner</name>
  <version>0.0.0</version>
  <description>The wrapper_planner package</description>

  <maintainer email="913982779@qq.com">winter</maintainer>

  <license>GPL3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>graph_planner</depend>
  <depend>evolutionary_planner</depend>
  <depend>sample_planner</depend>
  <depend>global_planner</depend>
  <depend>voronoi_layer</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <nav_core plugin="${prefix}/wrapper_planner_plugin.xml" />
  </export>
</package>
