<?xml version="1.0"?>
<package format="2">
    <name>path_visual</name>
    <version>0.0.0</version>
    <description>The path_visual package</description>
    <!--  One maintainer tag required, multiple allowed, one person per tag  -->
    <!--  Example:   -->
    <!--  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>  -->
    <maintainer email="ryoo@todo.todo">ryoo</maintainer>
    <!--  One license tag required, multiple allowed, one license per tag  -->
    <!--  Commonly used license strings:  -->
    <!--    BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3  -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>pluginlib</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib_msgs</depend>
    <depend>rviz</depend>
    <depend>std_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
